Make rspec box selectable and legible (though not yet scrollable), plus make jacks-app take list of aggregates to resolve URN=>Name

--- a/portal/www/portal/jacks-app.css
+++ b/portal/www/portal/jacks-app.css
@@ -108,3 +108,8 @@
 #jacks-app #active .checkbox {
   stroke-width: 5px;
 }
+
+.jacks #leftNav pre {
+   color: black;
+   overflow: auto;
+}
